sonarcloud code smells : Replace usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'
Signed-off-by: vlo-rte <valerie.longa@rte-france.com>