@@ -1,4 +1,4 @@
-/* Copyright (c) 2018-2022, RTE (http://www.rte-france.com)
+/* Copyright (c) 2018-2023, RTE (http://www.rte-france.com)
  * See AUTHORS.txt
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,7 +11,6 @@
 package org.opfab.springtools.configuration.oauth.jwt.groups;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.opfab.springtools.configuration.oauth.jwt.groups.roles.RoleClaim;
 import org.springframework.security.core.GrantedAuthority;
@@ -61,7 +60,7 @@ public class GroupsUtils {
 	private List<String> getGroupsFromListRolesClaim(Jwt jwt, List<RoleClaim> listRoleClaim) {	
 		return listRoleClaim.stream().map(roleClaim -> roleClaim.getListRoles(jwt))
 				.flatMap(List::stream)
-				.collect(Collectors.toList());
+				.toList();
 	}
 	
 	/**
